--- a/buyproducts/buy_products.css
+++ b/buyproducts/buy_products.css
@@ -1055,7 +1055,7 @@ font-size: 36px;
 
 .product {
   background-color: rgba(65, 103, 0, 0.526);
-    border: 1px solid #ddd;
+    border: 1px solid #03bd10;
     border-radius: 10px;
     margin: 10px;
     padding: 10px;
