--- a/blog/blogpagestyle.css
+++ b/blog/blogpagestyle.css
@@ -898,3 +898,27 @@ font-size: 36px;
     color: #218838; /* Change icon color on hover */
   }
 }
+.socialIcons #mail:hover{
+  background: #bd4b39;
+  }
+  #mail:hover i{
+    color: white;
+  }
+  .socialIcons #inst:hover{
+    background: linear-gradient(45deg, #833ab4, #e1306c, #fd1d1d, #fdcb5d);
+  }
+  #inst:hover i{
+    color: white;
+  }
+  .socialIcons #twit:hover{
+    background: black;
+  }
+  #twit:hover i{
+    color: white;
+  }
+  .socialIcons #fb:hover{
+    background: #1877f2;
+  }
+  #fb:hover i{
+    color: white;
+  }
