--- a/testimonials/testimonials.css
+++ b/testimonials/testimonials.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 
+*{
+    font-family: "Poppins";
+}
+
 .wrapper {
     padding-top: 80px;
     max-width: 1300px;
