--- a/about/about.css
+++ b/about/about.css
@@ -8,7 +8,7 @@
     font-weight: 400;
     outline: none;
     list-style-type: none;
-    font-family: "Playfair Display", serif;
+    font-family: "Poppins";
 }
 
 :root {
