--- a/FAQS/faqpagestyle.css
+++ b/FAQS/faqpagestyle.css
@@ -893,7 +893,7 @@ font-size: 36px;
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  background-color: yellow;
+  background-color: white;
   border-radius: 50%;
   width: 40px;
   height: 40px;
