--- a/testimonials/testimonials.css
+++ b/testimonials/testimonials.css
@@ -94,7 +94,7 @@
     scroll-snap-align: start;
     height: 342px;
     list-style: none;
-    background: #D7B32F;
+    background: #B19222;
     cursor: pointer;
     padding: 20px;
     flex-direction: column;
