--- a/blog/blogpagestyle.css
+++ b/blog/blogpagestyle.css
@@ -275,7 +275,7 @@ span {
   position: relative;
   /* width: 290px; */
   max-width: 290px;
-  max-height: 500px;
+  max-height: 516px;
   background: linear-gradient(90deg, rgb(31, 102, 31), rgb(231, 231, 121));
   background: -webkit-linear-gradient(
     90deg,
@@ -331,9 +331,11 @@ span {
   text-align: justify;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 130%;
 }
-
+.fixed{
+  margin-bottom: 12px;
+}
 a {
   text-decoration: none;
 }
