--- a/login/login.css
+++ b/login/login.css
@@ -81,6 +81,8 @@ body::before {
   width: 768px;
   max-width: 100%;
   min-height: 480px;
+  display: flex;
+  justify-content: center;
 }
 
 .container p {
