--- a/FAQS/faqpagestyle.css
+++ b/FAQS/faqpagestyle.css
@@ -74,10 +74,14 @@ section {
   justify-content: space-between;
   align-items: center;
   z-index: 100;
-  opacity: all 0.8s;
+  transition: all 0.8s;
 }
 .header.sticky {
-  border-bottom: 0.1rem solid rgb(252, 187, 223);
+  /* border-bottom: 0.1rem solid rgb(252, 187, 223); */
+  opacity: 0.9;
+  padding: 2rem 10% 2rem 5%; /* Adjusted padding to ensure space for the sign-in button */
+  background-color: --main-color;
+  box-shadow: 0 0 1.5px 2px rgb(14, 14, 14,0.8);
 }
 .header img{
   height: 6rem;
