--- a/login/login.css
+++ b/login/login.css
@@ -381,3 +381,14 @@ body::before {
     bottom: -95%;
   }
 }
+.success-banner {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: #14810a;
+  color: white;
+  text-align: center;
+  padding: 30px;
+  z-index: 1000;
+  font-size:2rem;
+}
